Fixed table visual width related to overflow-y from auto to scroll

--- a/css/main.css
+++ b/css/main.css
@@ -540,7 +540,7 @@ select {
 
 /* Tables */
 .table-container {
-  overflow-y: auto;
+  overflow-y: scroll;
   margin-bottom: 2em;
 }
 @media only screen and (min-width: 768px) {
